--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -47,7 +47,7 @@
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions>
             <Grid.Background>
-                <ImageBrush RenderOptions.BitmapScalingMode="HighQuality" ImageSource="../images/main_banner.png" Stretch="UniformToFill"/>
+                <ImageBrush RenderOptions.BitmapScalingMode="HighQuality" ImageSource="../resources/images/main_banner.png" Stretch="UniformToFill"/>
             </Grid.Background>
 
             <Button Grid.Column="2" Grid.Row="0" x:Name="VisitME3"
@@ -56,7 +56,7 @@
             <Button Grid.Column="2" Grid.Row="1" x:Name="VisitLE3" 
                     Content="Visit LE3 mod site" ToolTip="Visit the LE3 mod on NexusMods"
                     VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,15" Width="150" Height="auto" />
-            <Image RenderOptions.BitmapScalingMode="Fant"  VerticalAlignment="Center" Grid.RowSpan="2" Grid.Column="1" Source="../images/logo.png" Width="400" MaxWidth="400" Margin="10"/>
+            <Image RenderOptions.BitmapScalingMode="Fant"  VerticalAlignment="Center" Grid.RowSpan="2" Grid.Column="1" Source="../resources/images/logo.png" Width="400" MaxWidth="400" Margin="10"/>
         </Grid>
 
 
@@ -68,6 +68,7 @@
         <ContentControl Margin="10" Grid.Row="4" Grid.Column="1" x:Name="StatusBar"/>
 
         <Button x:Name="LaunchInfoWindow"
+                ToolTip="Open the Information window"
                 Background="#2a2b34" BorderThickness="0"
                 Margin="20,10,0,0" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top">
             <Button.Content>
@@ -75,6 +76,7 @@
             </Button.Content>
         </Button>
         <Button x:Name="LaunchHelpWindow"
+                ToolTip="Open the FAQ window"
                 Background="#2a2b34" BorderThickness="0"
                 Margin="0,10,10,0" Grid.Row="4" Grid.Column="3" VerticalAlignment="Top">
             <Button.Content>
