--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -18,24 +18,8 @@
     <Window.Style>
         <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
     </Window.Style>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="100" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="10" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="10" />
-        </Grid.ColumnDefinitions>
-
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5">
+    <DockPanel>
+        <Grid DockPanel.Dock="Top" Height="100">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
@@ -62,28 +46,38 @@
         </Grid>
 
 
-        <ContentControl Margin="10,20,10,10" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" x:Name="MorphControl" />
+        <ContentControl Margin="20,20,20,0" DockPanel.Dock="Top" x:Name="MorphControl"/>
 
         <!-- Bottom -->
-        <Rectangle Margin="10,5,10,0" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Fill="Gray" Height="1"/>
 
-        <ContentControl Margin="10" Grid.Row="4" Grid.Column="1" x:Name="StatusBar"/>
+        <Grid Margin="20,10,20,5"  DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="35"/>
+                <ColumnDefinition Width="35"/>
+            </Grid.ColumnDefinitions>
 
-        <Button x:Name="LaunchInfoWindow"
-                ToolTip="Information"
-                Background="#2a2b34" BorderThickness="0"
-                Margin="20,10,0,0" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top">
-            <Button.Content>
-                <fa5:ImageAwesome Icon="Solid_InfoCircle" Foreground="white" Width="15" Height="15"/>
-            </Button.Content>
-        </Button>
-        <Button x:Name="LaunchFAQWindow"
-                ToolTip="Frequently Asked Questions"
-                Background="#2a2b34" BorderThickness="0"
-                Margin="0,10,10,0" Grid.Row="4" Grid.Column="3" VerticalAlignment="Top">
-            <Button.Content>
-                <fa5:ImageAwesome Icon="Solid_QuestionCircle" Foreground="white" Width="15" Height="15"/>
-            </Button.Content>
-        </Button>
-    </Grid>
+            <Rectangle Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Fill="Gray" Height="1"/>
+
+            <ContentControl Grid.Column="0" Grid.Row="2" x:Name="StatusBar"/>
+
+            <Button x:Name="LaunchInfoWindow" ToolTip="Information" Grid.Column="1" Grid.Row="2"
+                Background="#2a2b34" BorderThickness="0" >
+                <Button.Content>
+                    <fa5:ImageAwesome Icon="Solid_InfoCircle" Foreground="white" Width="15" Height="15"/>
+                </Button.Content>
+            </Button>
+            <Button x:Name="LaunchFAQWindow" ToolTip="Frequently Asked Questions" Grid.Column="2" Grid.Row="2"
+                Background="#2a2b34" BorderThickness="0" >
+                <Button.Content>
+                    <fa5:ImageAwesome Icon="Solid_QuestionCircle" Foreground="white" Width="15" Height="15"/>
+                </Button.Content>
+            </Button>
+        </Grid>
+    </DockPanel>
 </Window>
