--- a/FSvBSCustomCloneUtility/Views/StatusBarView.xaml
+++ b/FSvBSCustomCloneUtility/Views/StatusBarView.xaml
@@ -5,5 +5,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Views"
              mc:Ignorable="d">
-    <TextBlock x:Name="StatusMessage"/>
+    <TextBlock x:Name="StatusMessage" VerticalAlignment="Center"/>
 </UserControl>
